# dio-core

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
aigentic/: __init__.py  logging.py  model_registry.py
aigentic/core/: __init__.py  dio.py  fde.py  pii_detector.py  provider.py  response.py  router.py
aigentic/data/: model_capabilities.json
aigentic/policies/: __init__.py  fallback.py  privacy.py
aigentic/providers/: __init__.py  claude.py  gemini.py  mock.py  ollama.py  openai.py  openrouter.py  webhost.py
aigentic/registry/: __init__.py  client.py
aigentic/server/: __init__.py  app.py  device_context.py  models.py  routes.py  shadow.py
examples/: android_demo.py  cloud_models.py  hybrid_models.py  private_models.py  quickstart.py  workshop_real_providers.py  workshop_setup.py
examples/android/: DioClient.kt
tests/: __init__.py  test_cost.py  test_examples_smoke.py  test_integration.py  test_logging.py  test_pii.py  test_providers.py  test_registry.py  test_router.py  test_server.py
