[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigentic"
version = "0.1.0"
description = "DIO (Distributed Intelligence Orchestration) - Adaptive LLM routing between cloud and local models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DIO Core Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",   # required by FastAPI TestClient
    "ruff>=0.1.0",
]
cloud = [
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
    "anthropic>=0.8.0",
    "python-dotenv>=0.19.0",
]
local = [
    "requests>=2.31.0",  # For Ollama HTTP API
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
registry = [
    "httpx>=0.24.0",
    "redis>=4.0.0",
]
all = [
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
    "anthropic>=0.8.0",
    "requests>=2.31.0",
    "python-dotenv>=0.19.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "httpx>=0.24.0",
    "redis>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dio-core"
Repository = "https://github.com/yourusername/dio-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["aigentic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Examples are demo/slide code — relax line length, import order, and inline style rules
"examples/*" = ["E501", "E402", "E701", "F821", "F541", "I001"]
# Test files with long Provider() instantiation lines
"tests/test_router.py" = ["E501"]
"tests/test_integration.py" = ["E501"]
